chapter 2 massive progress

--- a/content/appendix-C-zkratky.tex
+++ b/content/appendix-C-zkratky.tex
@@ -12,11 +12,15 @@
     \item [CORBA] Common Object Request Broker Architecture
     \item [DOM] Document Object Model
     \item [DSL] Domain-Specific Language
+    \item [EIS] Enterprise Information System
+    \item [EL] Expression Language
     \item [ESB] Enterprise Service Bus
     \item [HTTP] Hypertext Transfer Protocol
     \item [IDL] Interface Description Language
+    \item [IS] Informační systém
     \item [JSON] JavaScript Object Notation
     \item [MDA] Model-Driver Architecture
+    \item [MQ] Message Queue
     \item [ORB] Object Request Broker
     \item [OOP] Objektově Oriented Programming (Objektově orientované programování)
     \item [REST] Representational State Transfer
