--- a/content/chapter-03-reserse.tex
+++ b/content/chapter-03-reserse.tex
@@ -66,7 +66,8 @@ které musejí být konzistentně dodržovány na více místech,
 které spolu zdánlivě nesouvisí. Příkladem
 může být logování systémových akcí, optimalizace správy paměti
 nebo uniformní zpracování výjimek~\cite{kiczales1997aspect}.
-Takové požadavky nazýváme \textit{cross-cutting concerns}.
+Takové požadavky nazýváme \textit{průřezové problémy}
+(z anglického \textit{cross-cutting concerns}).
 V rámci OOP je programátor nucen v ojektech manuálně opakovat
 kód, který zodpovídá za jejich realizaci. Duplikace kódu
 vede k větší náchylnosti na lidskou chybu a k vyšším nárokům na vývoj
