--- a/content/chapter-05-implementace.tex
+++ b/content/chapter-05-implementace.tex
@@ -465,7 +465,7 @@ chybovou hlášku.
 
 \goal{Dosáhli jsme vytyčených cílů implementace}
 Na základě navrženého frameworku jsme implementovali prototypy
-knihoven pro platformy jazyka Java, jazyka Python a ekosystému
+knihoven pro platformy jazyka Java, jazyka Python a frameworku
 Node.js. Knihovny umožňují centrální správu a automatickou distribuci
 byznysových kontextů, včetně vyhodnocování jejich pravidel, za
 použití aspektově orientovaného přístupu.
