--- a/reference.bib
+++ b/reference.bib
@@ -1,16 +1,43 @@
-@article{cemusaspect,
-    title = {Aspect-driven Context-aware Services},
-    author = {Cemus, Karel and Klimes, Filip and Cerny, Tomas}
+% -- povinná literatura
+
+@inproceedings{cemus2014aspect,
+    title = {Aspect-driven design of information systems},
+    author = {Cemus, Karel and Cerny, Tomas},
+    booktitle = {International Conference on Current Trends in Theory and Practice of Informatics},
+    pages = {174--186},
+    year = {2014},
+    organization = {Springer}
 }
 
-@article{cemus2017separation,
-    title = {Separation of concerns for distributed cross-platform context-aware user interfaces},
+@inproceedings{cemus2017separation,
+    title = {Distributed Multi-Platform Context-Aware User Interface for Information Systems},
     author = {Cemus, Karel and Klimes, Filip and Kratochvil, Ondrej and Cerny, Tomas},
-    journal = {Cluster Computing},
-    pages = {1--8},
-    year = {2017},
-    publisher = {Springer}
+    booktitle = {IT Convergence and Security (ICITCS), 2016 6th International Conference on},
+    pages = {1--4},
+    year = {2016},
+    organization = {IEEE}
 }
+
+@article{cemus2015automated,
+    title = {Automated business rules transformation into a persistence layer},
+    author = {Cemus, Karel and Cerny, Tomas and Donahoo, Michael J},
+    journal = {Procedia Computer Science},
+    volume = {62},
+    pages = {312--318},
+    year = {2015},
+    publisher = {Elsevier}
+}
+
+@inproceedings{kennard2009separation,
+    title = {Separation anxiety: stresses of developing a modern day separable user interface},
+    author = {Kennard, Richard and Edmonds, Ernest and Leaney, John},
+    booktitle = {Human System Interactions, 2009. HSI'09. 2nd Conference on},
+    pages = {228--235},
+    year = {2009},
+    organization = {IEEE}
+}
+
+% -- konec povinné literatury
 
 @inproceedings{cerny2017disambiguation,
     title = {Disambiguation and Comparison of SOA, Microservices and Self-Contained Systems},
