--- a/content/chapter-01-uvod.tex
+++ b/content/chapter-01-uvod.tex
@@ -1,5 +1,5 @@
-\usepackage[T1]{fontenc}
-\usepackage[utf8]{inputenc}
+%\usepackage[T1]{fontenc}
+%\usepackage[utf8]{inputenc}
 
 %!TEX ROOT=../diploma-thesis.tex
 
@@ -28,7 +28,7 @@ Kapitola~\ref{ch:navrh} formalizuje prostředí architektury orientované na slu
 aspektově orientovaného programování a na základě této formalizace navrhuje koncept frameworku,
 který realizuje centrální správu a automatickou distribuci byznysových pravidel.
 V kapitole~\ref{ch:implementace} je detailně probrána implementace knihoven pro navržený framework
-pro platformy jazyků Java a Python a ekosystému Node.js. Následující kapitola~\ref{ch:verifikace}
+pro platformy jazyků Java a Python a frameworku Node.js. Následující kapitola~\ref{ch:verifikace}
 popisuje, jakým způsobem byly tyto knihovny otestovány a jak byla prokázána jejich funkčnost. Zároveň
 je zde popsána validace a vyhodnocení konceptu frameworku jeho nasazením při vývoji
 jednoduchého ukázkového e-commerce systému. V poslední kapitole~\ref{ch:zaver} je shrnuto, jakých
