chapter 2 first version

--- a/content/appendix-C-zkratky.tex
+++ b/content/appendix-C-zkratky.tex
@@ -27,6 +27,7 @@
     \item [RPC] Remote Procedure Call
     \item [SOA] Service Oriented Architecture
     \item [SOAP] Simple Object Access Protocol
+    \item [UI] User Interface
     \item [WSDL] Web Service Description Language
     \item [XML] Extensible Markup Language
     \item [XSD] XML Schema Definition
