--- a/reference.bib
+++ b/reference.bib
@@ -399,9 +399,26 @@
     urldate = {2018-04-12},
 }
 
-@online{nginx2015fourtier,
-    title = {It’s Time to Move to a Four‑Tier Application Architecture},
-    url = {https://www.nginx.com/blog/time-to-move-to-a-four-tier-application-architecture/},
+@online{orchestration,
+    key = {The Role of Service Orchestration Within SOA},
+    title = {The Role of Service Orchestration Within SOA},
+    url = {https://www.nomagic.com/news/insights/the-role-of-service-orchestration-within-soa},
     urldate = {2018-04-12},
-    author = {Patrick Nommensen}
+}
+
+@online{orchestrationvschoreography,
+    key = {Orchestration vs. Choreography},
+    title = {Orchestration vs. Choreography},
+    url = {https://stackoverflow.com/questions/4127241/orchestration-vs-choreography},
+    urldate = {2018-04-12},
+}
+
+@incollection{dragoni2017microservices,
+    title={Microservices: yesterday, today, and tomorrow},
+    author={Dragoni, Nicola and Giallorenzo, Saverio and Lafuente, Alberto Lluch and Mazzara, Manuel and Montesi, Fabrizio and Mustafin, Ruslan and Safina, Larisa},
+    booktitle={Present and Ulterior Software Engineering},
+    pages={195--216},
+    year={2017},
+    publisher={Springer},
+    address = {Cham, Switzerland},
 }
